umi: parts: implement dc dimming preference
based on previous DisplayFeature-powered dc dimming,
except now it uses exposure adjustment instead.

Co-authored-by: TheScarastic <warabhishek@gmail.com>
Co-authored-by: jhenrique09 <jhenrique09.mcz@hotmail.com>

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -41,4 +41,9 @@
     <string name="htsr_enable_title">Increase Touch Responsiveness</string>
     <string name="htsr_enable_summary">Increases touch polling rate to decrease latency</string>
 
+
+    <!-- DC dimming settings -->
+    <string name="dc_dimming_enable_title">Anti-Flicker Mode</string>
+    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduce image quality and color production)</string>
+
 </resources>
